tooling/nargo_cli/tests/snapshots/execution_success/regression_9206/execute__tests__stdout.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stdout
---
brillig(inline) fn main f0 {
  b0(v7: u32):
    (no terminator instruction)
}
[regression_9206] Circuit output: 0
